changed modal content and fixed project title on mobile

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -307,7 +307,12 @@ body, html {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    background-size: cover!important;
+    background-color: #f9f9f9;
+    overflow-y: scroll;
+    color:#000000;
     z-index: 99999;
     opacity:0;
     -webkit-transition: opacity 400ms ease-in;
@@ -321,27 +326,71 @@ body, html {
     pointer-events: auto;
 }
 
-.modalDialog > div {
-    width: 975px;
-    height: 1000px;
-    position: relative;
-    margin: 7% auto;
-    /* padding: 5px 20px 13px 20px; */
-    background: #fff;
-    color: #000000;
-}
-
 .close {
     color: #000000;
-    font-size: 45px;
+    font-size: 50px;
     line-height: 25px;
-    position: absolute;
-    right: 11px;
+    position: fixed;
+    right: 60px;
+    z-index: 1000;
     text-align: center;
     /* top: 15px; */
-    top: 94.8%;
+    top: 35px;
     width: 30px;
     text-decoration: none;
+}
+
+.modalDialog header {
+    background-color: #041c64;
+}
+
+.item-content header {
+    padding-top: 60px;
+    color: #f9f9f9;
+}
+
+.item-content img {
+    margin: 0 auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 1170px;
+}
+
+.container h2 {
+    font-size: 20px;
+    font-weight: 300;
+    font-style: normal;
+    margin: 20px 0 40px;
+    line-height: 32px;
+}
+
+.container h2 b {
+    font-weight: 100;
+    font-style: normal;
+    display: block;
+    font-size: 60px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    letter-spacing: .05em;
+    text-transform: uppercase;
+}
+
+.container h2 small {
+    font-weight: 300;
+    font-style: normal;
+    display: block;
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: .05em;
+    text-transform: uppercase;
 }
 
 .info-box {
@@ -496,6 +545,11 @@ body, html {
     .project-title {
         width: 1000px;
     }
+
+    /* Modal */
+    .container {
+        width: 1000px;
+    }
 }
 
 
@@ -545,6 +599,11 @@ body, html {
     }
     .project-title {
         width: 950px;
+    }
+
+    /* Modal */
+    .container {
+        width: 850px;
     }
 }
 
@@ -602,6 +661,10 @@ body, html {
     #projects .project-row .project-item-name-div p {
         font-size: 19px;
         letter-spacing: .16em;
+    }
+    /* Modal */
+    .container {
+        width: 750px;
     }
 }
 
@@ -675,6 +738,11 @@ body, html {
     #projects .project-row .project-item-name {
         background: rgba(0,0,0,.5);
         opacity: 1;
+    }
+
+    /* Modal */
+    .container {
+        width: 650px;
     }
 }
 
@@ -753,6 +821,10 @@ body, html {
         background: rgba(0,0,0,.5);
         opacity: 1;
     }
+    /* Modal */
+    .container {
+        width: 600px;
+    }
 }
 
 
@@ -799,6 +871,11 @@ body, html {
     #projects .project-row .project-item-name {
         background: rgba(0,0,0,.5);
         opacity: 1;
+    }
+
+    /* Modal */
+    .container {
+        width: 575px;
     }
 }
 
@@ -848,6 +925,11 @@ body, html {
     #projects .project-row .project-item-name {
         background: rgba(0,0,0,.5);
         opacity: 1;
+    }
+
+    /* Modal */
+    .container {
+        width: 525px;
     }
 }
 
@@ -965,6 +1047,11 @@ body, html {
         background: rgba(0,0,0,.5);
         opacity: 1;
     }
+
+    /* Modal */
+    .container {
+        width: 475px;
+    }
 }
 
 
@@ -1046,6 +1133,9 @@ body, html {
     }
 
     /* Projects */
+    .project-title {
+        width: 290px;
+    }
     .project-row li {
         height: 375px;
     }
@@ -1065,5 +1155,10 @@ body, html {
     #projects .project-row .project-item-name {
         background: rgba(0,0,0,.5);
         opacity: 1;
+    }
+
+    /* Modal */
+    .container {
+        width: 290px;
     }
 }
